--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "siaga-rt-05-gayam",
+  "name": "siaga-rw-05-kelurahan-gayam",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,10 +9,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "18.2.0",
     "react": "18.2.0",
+    "react-dom": "18.2.0",
     "lucide-react": "0.344.0",
-    "firebase": "^12.6.0"
+    "firebase": "^12.7.0",
+    "xlsx": "0.18.5",
+    "recharts": "2.12.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
